Version 1.0.9
=============
* Adding validate_single_action() to AJAX_validator
* Adding support for option groups to select HTML element
* Adding possibility to log to syslog

Version 1.0.8
=============
* adding possibility to set default timezone in config file
* automaticaly save info/error messages to session variable when page_cotroler::reload() is executed 
  and retrieve them when page is reloaded
* it's not needed to pass errors to function action_log() anymore
* bug fix: CData_Layer::sql_format() allow float values
* apu_filter now exports filter values to smarty template

Version 1.0.7
=============
* adding few js functions for better manipulation with values of html form elements

version 1.0.6
=============
* workaround for enable/disable options of selects is active for only for IE7 
  and older. It is not needed since IE8
  
version 1.0.5
=============
* function check_ip_addr_netmask(): fixing check of IPv6 addresses to not allow
  values like 1:1:1
* write unhandled PearErrorExceptions into logfile

version 1.0.4
=============

* adding new function to proper validation of IPv6 addresses
* fixing error: Notice: Undefined variable: errors in functions/load_lang.php on line 218

version 1.0.3
=============

* Default config value for $config->data_sql->set_charset changed to 'true'.

version 1.0.2
=============

* Allow applications to create customized smarty plugins. To do so the application
  should set variable $_SERWEB["smartypluginsdir"] to directory where are the
  customized plugins stored.

version 1.0.1
=============

* 'Filter' class used by data_layer get* functions now supports "in" operator.
* Adding support for optional "Reset" button to widgets/apu_filter_dropdown


Version 1.0.0
=============